seccond commit; q q end cler

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <section>
             <img src="images/WhatsApp_Image_2022-05-03_at_3.33.18_PM-removebg-preview.png" width="120px" height="150px" alt="">
             <h2>Yuven Carlson D</h2>
-            <p>CODEwithCREST and CRESTLANCING founder and content creator 🔥</p>
+            <p>FrontEnd developer, CODEwithCREST and CRESTLANCING founder and content creator 🔥</p>
         </section>
         
         <div class="social">
@@ -67,6 +67,8 @@
 
 
         </div>
+
+
 
     </div>
     
