--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
             <button>Sign in</button>
         </nav>
         <section>
-            <img src="images/WhatsApp_Image_2022-05-03_at_3.33.18_PM-removebg-preview.png" width="120px" height="150px" alt="">
+            <div class="profile-img">
+                <img src="images/WhatsApp_Image_2022-05-03_at_3.33.18_PM-removebg-preview.png" width="100%" height="250px" alt="">
+            </div>
+           
             <h2>Yuven Carlson D</h2>
             <p>FrontEnd developer, CODEwithCREST and CRESTLANCING founder and content creator 🔥</p>
         </section>
